Study of rcrossref and adds litsearchr and webcrawlr

--- a/README
+++ b/README
@@ -1,13 +1,3 @@
-Hawai‘i Climate Smart Agriculture Links to Ecosystem Services
-========
+# Literature Review: Climate-Smart Ag Links to Ecosystem Services
 
-The City and County of Honolulu's Office of Climate Resilience has
-contracted OACA to produce a Climate Smart Agriculture database
-intended to inform food system professionals and policy makers on the
-potential ecosystem service impacts of CSA activities. 
-
-*Main Products*
-
-- Lit search database of Climate Smart Agriculture cross-referenced with tropical regions and ecosystem services.
-- Lit analysis examining trends across time and regions.
-- Web interface to information.
+- Literature review for the Climate-Smart Ag database for Honolulu City and County.
