Adds crosswalk table

--- a/notebook.Rmd
+++ b/notebook.Rmd
@@ -189,9 +189,9 @@ for (i in seq_len(length(nrc.cat))){
 
 nrc.tab <- cbind(do.call(rbind, nrc.cat), nrc.url)
 colnames(nrc.tab) <- c("Category", 
-                       paste0(rep("Sub-Category"), (ncol(nrc.tab) - 2), 
-                       1:(ncol(nrc.tab) - 2)), 
+                       paste0("Sub-Category ", seq(1, ncol(nrc.tab)-2)),
                        "Resource")
+
 
 ```
 
@@ -201,7 +201,27 @@ were extracted manually using [tabula](https://tabula.technology/ "tabula").
 
 ```{r nrcs-pdf-tables, }
 
+csa.mit.tab <- read.csv("data/tabula-NRCS-CSAF-Mitigation-Activities.csv", header = FALSE)
+csa.mit.head <- csa.mit.tab[grepl("Mitigation Categories", csa.mit.tab[, 1]), ]
+csa.mit.head <- gsub("\\[.*?\\]", "", csa.mit.head)
+csa.mit.head <- gsub("  ", " ", csa.mit.head)
+colnames(csa.mit.tab) <- csa.mit.head
+csa.mit.tab <- apply(csa.mit.tab, 2, gsub, pattern = "\\[.*?\\]", replace = "")
+csa.mit.tab <- apply(csa.mit.tab, 2, gsub, pattern = "  ", replace = " ")
 
+## Removing narrative crosswalk
+csa.cwk <- csa.mit.tab[seq(grep("Waste Storage Structure", csa.mit.tab[, 2]), nrow(csa.mit.tab)), ]
+colnames(csa.cwk)[4] <- "Narrative"
+csa.mit.tab <-csa.mit.tab[-seq(grep("Waste Storage Structure", csa.mit.tab[, 2]), nrow(csa.mit.tab)), ]
+
+## Generate urls for codes
+csa.mit.tab[!(grepl("E", csa.mit.tab[, "Code"])), "Code"] <- ""
+csa.mit.url <- paste0("https://www.nrcs.usda.gov/sites/default/files/2022-11/", 
+                      csa.mit.tab[, "Code"],
+                      "_July_2022.pdf")
+csa.mit.url <- gsub(" ", "-", csa.mit.url)
+csa.mit.url[csa.mit.tab[, "Code"] == ""] <- ""
+csa.mit.tab <- data.frame(csa.mit.tab, "URL" = csa.mit.url)
 
 ```
 
@@ -211,6 +231,13 @@ were extracted manually using [tabula](https://tabula.technology/ "tabula").
 kable(nrc.tab)
 
 ```
+
+```{r mit-table, echo=FALSE, message=FALSE, warnings=FALSE, results='asis'}
+
+kable(csa.mit.tab)
+
+```
+
 
 
 # analysis
