Adds notes from meeting

--- a/notebook.Rmd
+++ b/notebook.Rmd
@@ -4,6 +4,15 @@ author: MK Lau
 ---
 
 
+Search
+
+https://gofarmhawaii.org/aghelp/
+
+https://attra.ncat.org/topics/
+
+https://ifssportal.nutritionconnect.org/solutions/explore
+
+
 # Context
 
 The City and County of Honolulu's Office of Climate Resilience has
